--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,15 @@
+server:
+  port: 8080
 spring:
   application:
     name: sob-blog
-server:
-  port: 8080
+  datasource:
+    url: jdbc:mysql://localhost:3309/ssm?characterEncoding=utf-8
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: 123456
+
+
+mybatis:
+  typeAliasesPackage: com.ssm.entity
+  mapperLocations:  classpath:mapper/*Mapper.xml
