--- a/.gitignore
+++ b/.gitignore
@@ -99,4 +99,5 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+logs
 
